Updated Hungarian translation by Gabor Kelemen.
2004-09-12  Laszlo Dvornik  <dvornik@gnome.hu>

	* hu.po: Updated Hungarian translation by Gabor Kelemen.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-12  Laszlo Dvornik  <dvornik@gnome.hu>
+
+	* hu.po: Updated Hungarian translation by Gabor Kelemen.
+
 2004-09-11  Dafydd Harries  <daf@muse.19inch.net>
 
 	* cy.po: Updated Welsh translation.
