2004-09-12 Akagic Amila <bono@linux.org.ba> * bs.po: Updated Bosnian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-12  Akagic Amila  <bono@linux.org.ba>
+
+	* bs.po: Updated Bosnian translation.
+
 2004-09-12  Laszlo Dvornik  <dvornik@gnome.hu>
 
 	* hu.po: Updated Hungarian translation by Gabor Kelemen.
