Updated Thai translation.
2004-09-12  Paisa Seeluangsawat  <paisa@users.sf.net>

	* th.po: Updated Thai translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-12  Paisa Seeluangsawat  <paisa@users.sf.net>
+
+	* th.po: Updated Thai translation.
+
 2004-09-12  Akagic Amila  <bono@linux.org.ba>
 
 	* bs.po: Updated Bosnian translation.
@@ -54,9 +58,9 @@
 	Vladimir Petkov <vpetkov@i-space.org>
 
 2004-09-07  David Lodge <dave@cirt.net>
-                                                                                
-        * en_GB.po: Updated British translation.
-                                                                                
+
+	* en_GB.po: Updated British translation.
+
 2004-09-06  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated  Greek translation.
