--- a/po/th.po
+++ b/po/th.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-30 16:44+0200\n"
-"PO-Revision-Date: 2004-09-13 00:31-0500\n"
+"PO-Revision-Date: 2004-09-13 00:42-0500\n"
 "Last-Translator: Paisa Seeluangsawat <paisa@users.sf.net>\n"
 "Language-Team: Thai <L10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -4880,7 +4880,7 @@ msgstr "โฟ_ลเดอร์"
 
 #: src/nautilus-connect-server-dialog.c:516
 msgid "_User Name:"
-msgstr "_ชื่อผู้ใช้:"
+msgstr "ชื่อ_ผู้ใช้:"
 
 #: src/nautilus-connect-server-dialog.c:539
 msgid "_Name to use for connection:"
@@ -4892,7 +4892,7 @@ msgstr "เชื่อมต่อไปเซิร์ฟเวอร์"
 
 #: src/nautilus-connect-server-dialog.c:614
 msgid "Service _type:"
-msgstr "ชนิดบริการ:"
+msgstr "ชนิด_บริการ:"
 
 #: src/nautilus-connect-server-dialog.c:623
 msgid "SSH"
