Updated Thai translation.
2004-09-13  Paisa Seeluangsawat  <paisa@users.sf.net>

	* th.po: Updated Thai translation.

--- a/po/th.po
+++ b/po/th.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-30 16:44+0200\n"
+"POT-Creation-Date: 2004-09-13 01:48-0500\n"
 "PO-Revision-Date: 2004-09-13 00:42-0500\n"
 "Last-Translator: Paisa Seeluangsawat <paisa@users.sf.net>\n"
 "Language-Team: Thai <L10n@opentle.org>\n"
@@ -2039,7 +2039,7 @@ msgstr "ลิงก์"
 #: libnautilus-private/nautilus-file-operations.c:1194
 #, c-format
 msgid "link to %s"
-msgstr "จุดลิงก์ไป%s"
+msgstr "ลิงก์ไป%s"
 
 #: libnautilus-private/nautilus-file.c:4746
 msgid "link (broken)"
@@ -2142,7 +2142,7 @@ msgstr "เกิดข้อผิดพลาดขณะย้ายไป \"
 #: libnautilus-private/nautilus-file-operations.c:674
 #, c-format
 msgid "Error while creating link in \"%s\"."
-msgstr "เกิดข้อผิดพลาดขณะสร้างจุดลิงก์ใน \"%s\""
+msgstr "เกิดข้อผิดพลาดขณะสร้างลิงก์ใน \"%s\""
 
 #: libnautilus-private/nautilus-file-operations.c:687
 #: libnautilus-private/nautilus-file-operations.c:698
@@ -2166,7 +2166,7 @@ msgstr "เกิดข้อผิดพลาดขณะย้ายไป \"
 #: libnautilus-private/nautilus-file-operations.c:712
 #, c-format
 msgid "Error while creating links in \"%s\"."
-msgstr "เกิดข้อผิดพลาดขณะสร้างจุดลิงก์ใน \"%s\""
+msgstr "เกิดข้อผิดพลาดขณะสร้างลิงก์ใน \"%s\""
 
 #: libnautilus-private/nautilus-file-operations.c:740
 #, c-format
@@ -2192,7 +2192,7 @@ msgstr "เกิดข้อผิดพลาด \"%s\" ขณะย้าย 
 #: libnautilus-private/nautilus-file-operations.c:748
 #, c-format
 msgid "Error \"%s\" while creating a link to \"%s\"."
-msgstr "เกิดข้อผิดพลาด \"%s\" ขณะสร้างจุดลิงก์ไป \"%s\""
+msgstr "เกิดข้อผิดพลาด \"%s\" ขณะสร้างลิงก์ไป \"%s\""
 
 #: libnautilus-private/nautilus-file-operations.c:754
 #, c-format
@@ -2212,7 +2212,7 @@ msgstr "เกิดข้อผิดพลาด \"%s\" ขณะย้าย"
 #: libnautilus-private/nautilus-file-operations.c:777
 #, c-format
 msgid "Error \"%s\" while linking."
-msgstr "เกิดข้อผิดพลาด \"%s\" ขณะสร้างจุดลิงก์"
+msgstr "เกิดข้อผิดพลาด \"%s\" ขณะสร้างลิงก์"
 
 #: libnautilus-private/nautilus-file-operations.c:783
 #, c-format
@@ -2229,7 +2229,7 @@ msgstr "เกิดข้อผิดพลาดขณะย้าย"
 
 #: libnautilus-private/nautilus-file-operations.c:915
 msgid "Error While Linking"
-msgstr "เกิดข้อผิดพลาดขณะสร้างจุดลิงก์"
+msgstr "เกิดข้อผิดพลาดขณะสร้างลิงก์"
 
 #: libnautilus-private/nautilus-file-operations.c:920
 msgid "Error While Deleting"
@@ -2503,7 +2503,7 @@ msgstr "เตรียมสร้างลิงก์..."
 
 #: libnautilus-private/nautilus-file-operations.c:1958
 msgid "Finishing Creating Links..."
-msgstr "สร้างจุดลิงก์จะเสร็จแล้ว..."
+msgstr "สร้างลิงก์จะเสร็จแล้ว..."
 
 #. localizers: progress dialog title
 #: libnautilus-private/nautilus-file-operations.c:1964
@@ -2530,7 +2530,7 @@ msgstr "คุณจะคัดลอกแฟ้มไปลงถังขย
 
 #: libnautilus-private/nautilus-file-operations.c:1988
 msgid "You cannot create links inside the trash."
-msgstr "คุณจะสร้างจุดลิงก์ข้างในถังขยะไม่ได้"
+msgstr "คุณจะสร้างลิงก์ข้างในถังขยะไม่ได้"
 
 #: libnautilus-private/nautilus-file-operations.c:1989
 msgid "Files and folders can only be moved into the trash."
@@ -3650,7 +3650,7 @@ msgstr "เ_ชื่อมต่อ"
 
 #: src/file-manager/fm-directory-view.c:5480
 msgid "Link _name:"
-msgstr "ตั้ง_ชื่อจุดลิงก์:"
+msgstr "ตั้ง_ชื่อลิงก์:"
 
 #: src/file-manager/fm-directory-view.c:5792
 msgid "E_ject"
@@ -3716,12 +3716,12 @@ msgstr "_ลบถาวร"
 
 #: src/file-manager/fm-directory-view.c:6040
 msgid "Ma_ke Links"
-msgstr "ส_ร้างจุดลิงก์"
+msgstr "ส_ร้างลิงก์"
 
 #: src/file-manager/fm-directory-view.c:6041
 #: src/file-manager/nautilus-directory-view-ui.xml.h:19
 msgid "Ma_ke Link"
-msgstr "ส_ร้างจุดลิงก์"
+msgstr "ส_ร้างลิงก์"
 
 #: src/file-manager/fm-directory-view.c:6054
 #: src/file-manager/nautilus-directory-view-ui.xml.h:56
@@ -3748,20 +3748,20 @@ msgstr "_คัดลอกแฟ้ม"
 
 #: src/file-manager/fm-directory-view.c:6330
 msgid "The link is broken, do you want to move it to the Trash?"
-msgstr "จุดลิงก์ชี้ไปยังจุดหมายที่ไม่มีอยู่จริง จะทิ้งจุดลิงก์นี้ลงถังขยะไหม ?"
+msgstr "ลิงก์ชี้ไปยังจุดหมายที่ไม่มีอยู่จริง จะทิ้งลิงก์นี้ลงถังขยะไหม ?"
 
 #: src/file-manager/fm-directory-view.c:6332
 msgid "This link can't be used, because it has no target."
-msgstr "จุดลิงก์นี้ใช้ไม่ได้มันไม่ได้ชี้ไปที่ไหนเลย จะทิ้งจุดลิงก์นี้ลงถังขยะไหม ?"
+msgstr "ลิงก์นี้ใช้ไม่ได้มันไม่ได้ชี้ไปที่ไหนเลย จะทิ้งลิงก์นี้ลงถังขยะไหม ?"
 
 #: src/file-manager/fm-directory-view.c:6334
 #, c-format
 msgid "This link can't be used, because its target \"%s\" doesn't exist."
-msgstr "จุดลิงก์นี้ใช้ไม่ได้เพราะจุดหมาย (\"%s\") ไม่มีอยู่จริง จะทิ้งจุดลิงก์นี้ลงถังขยะไหม ?"
+msgstr "ลิงก์นี้ใช้ไม่ได้เพราะจุดหมาย (\"%s\") ไม่มีอยู่จริง จะทิ้งลิงก์นี้ลงถังขยะไหม ?"
 
 #: src/file-manager/fm-directory-view.c:6339
 msgid "Broken Link"
-msgstr "จุดลิงก์ขาด"
+msgstr "ลิงก์ขาด"
 
 #: src/file-manager/fm-directory-view.c:6643
 #, c-format
@@ -4163,7 +4163,7 @@ msgstr "เนื้อที่ว่าง:"
 
 #: src/file-manager/fm-properties-window.c:2347
 msgid "Link target:"
-msgstr "เป้าหมายจุดลิงก์:"
+msgstr "เป้าหมายลิงก์:"
 
 #: src/file-manager/fm-properties-window.c:2353
 msgid "MIME type:"
@@ -4712,19 +4712,19 @@ msgstr ""
 
 #: src/nautilus-application.c:344
 msgid "Link To Old Desktop"
-msgstr "จุดลิงก์ไปพื้นโต๊ะเก่า"
+msgstr "ลิงก์ไปพื้นโต๊ะเก่า"
 
 #: src/nautilus-application.c:360
 msgid "A link called \"Link To Old Desktop\" has been created on the desktop."
-msgstr "จุดลิงก์ชื่อ \"จุดลิงก์ไปพื้นโต๊ะเก่า\" ถูกสร้างใว้บนพื้นโต๊ะ"
+msgstr "ลิงก์ชื่อ \"ลิงก์ไปพื้นโต๊ะเก่า\" ถูกสร้างใว้บนพื้นโต๊ะ"
 
 #: src/nautilus-application.c:361
 msgid ""
 "The location of the desktop directory has changed in GNOME 2.4. You can open "
 "the link and move over the files you want, then delete the link."
 msgstr ""
-"ตำแหน่งโฟลเดอร์พื้นโต๊ะเปลี่ยนไปตั้งแต่ GNOME 2.4  คุณสามารถเปิดจุดลิงก์นี้ "
-"ย้ายแฟ้มเก่าๆมาที่พื้นโต๊ะใหม่ และลบจุดลิงก์นี้ทิ้ง"
+"ตำแหน่งโฟลเดอร์พื้นโต๊ะเปลี่ยนไปตั้งแต่ GNOME 2.4  คุณสามารถเปิดลิงก์นี้ "
+"ย้ายแฟ้มเก่าๆมาที่พื้นโต๊ะใหม่ และลบลิงก์นี้ทิ้ง"
 
 #: src/nautilus-application.c:363
 msgid "Migrated Old Desktop"
@@ -7439,7 +7439,7 @@ msgstr "ดูเซิร์ฟเวอร์ในเครือข่าย
 #~ "\n"
 #~ "There is not enough space on the destination."
 #~ msgstr ""
-#~ "สร้างจุดลิงก์ \"%s\" ไม่สำเร็จ\n"
+#~ "สร้างลิงก์ \"%s\" ไม่สำเร็จ\n"
 #~ "\n"
 #~ "จุดหมายมีที่ไม่พอ"
 
@@ -7466,7 +7466,7 @@ msgstr "ดูเซิร์ฟเวอร์ในเครือข่าย
 #~ "\n"
 #~ "You do not have permissions to write to this folder."
 #~ msgstr ""
-#~ "สร้างจุดลิงก์ใน \"%s\" ไม่สำเร็จ\n"
+#~ "สร้างลิงก์ใน \"%s\" ไม่สำเร็จ\n"
 #~ "\n"
 #~ "คุณไม่มีสิทธิ์เขียนแฟ้มนี้"
 
@@ -7475,7 +7475,7 @@ msgstr "ดูเซิร์ฟเวอร์ในเครือข่าย
 #~ "\n"
 #~ "The destination disk is read-only."
 #~ msgstr ""
-#~ "สร้างจุดลิงก์ใน \"%s\" ไม่สำเร็จ\n"
+#~ "สร้างลิงก์ใน \"%s\" ไม่สำเร็จ\n"
 #~ "\n"
 #~ "ดิสก์จุดหมายเขียนได้เท่านั้น"
 
@@ -7520,7 +7520,7 @@ msgstr "ดูเซิร์ฟเวอร์ในเครือข่าย
 #~ "\n"
 #~ "Would you like to continue?"
 #~ msgstr ""
-#~ "เกิดข้อผิดพลาด \"%s\" ขณะสร้างจุดลิงก์\n"
+#~ "เกิดข้อผิดพลาด \"%s\" ขณะสร้างลิงก์\n"
 #~ "\n"
 #~ "จะสร้างต่อไหม?"
 
